-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.1
-
None
-
-
6607b3ee0 (dev), 42ae5cca5 (6.5)
According to QTBUG-69444 WebAssembly now supports playing audio files, however when I tried to player->setAudioOutput(audioOutput); I get memory out of bounds error on Chrome, and index out of bounds in Firefox. I did this with a very simple app, if I delay the call the application loads but I get the same error when looking at the browser console.
- depends on
-
QTBUG-98467 implement QPlatformMediaPlayer for wasm
-
- Closed
-
| For Gerrit Dashboard: QTBUG-98373 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 455851,11 | wasm: add support for QAudioOutput | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 462536,2 | wasm: add support for QAudioOutput | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |