wasm: add support for QAudioOutput

This allows QMediaPlayer to play audio

Fixes: QTBUG-98373
Change-Id: If6c831081f5e6c4216775d7d7672b8a8e2f85208
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
(cherry picked from commit 6607b3ee062e12dee458b211ddba474c999a0156)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>