src/plugins/multimedia/wasm/common/qwasmvideooutput.cpp
@@ -446,7 +446,10 @@ void QWasmVideoOutput::createVideoElement(const std::string &id)
     body.call<void>("appendChild", m_video);
 
     // Create/add video source
-    m_video.set("src", m_source.toStdString());
+    emscripten::val videoElementGeometry =
+            document.call<emscripten::val>("createElement", std::string("source"));
+
+    videoElementGeometry.set("src", m_source.toStdString());
 
     // Set position:absolute, which makes it possible to position the video
     // element using x,y. coordinates, relative to its parent (the page's <body>
